src/components/Admin/Calendar/calendar.scss
@import "../../../colors.scss";

.wrapper {
  text-align: center;

  .date-nav {
    margin: 1em;

    .date-nav-btn {
      cursor: pointer;
      &:hover {
        background-color: lime;
      }
      &:active {
        background-color: green;
      }
    }
  }

  .calendar-container {
    margin: 1em;
    display: flex;
    justify-content: center;

    .view-month {
      display: grid;
      grid-template-columns: repeat(7, 10em);
      grid-template-rows: [row] auto;
      grid-gap: 2px;

      .day-header {
        height: 2em;
        background-color: rgb(238, 238, 238);
        display: flex;
        justify-content: flex-end;
        align-items: center;
        padding: 0 0.5em;
      }

      .day {
        height: 8em;
        padding-top: 1.5em;
        position: relative;
        $pad-h: 0.25em;
        padding-right: $pad-h;
        padding-left: $pad-h;

        .day-num-header {
          position: absolute;
          display: inline-block;
          top: 0;
          right: 0;
          background-color: rgb(199, 244, 255);
          width: 100%;
          text-align: right;
          padding-right: 0.5em;

          &:hover {
            background-color: rgb(127, 255, 212);
          }
        }

        .event-list {
          overflow: scroll;
          height: 100%;
          width: 100%;

          .event {
            font-size: 0.8em;
            background-color: rgba(202, 0, 0, 0.699);
            border-radius: 4px;
            margin: 1px 0;
            z-index: 4;
          }
        }
      }

      .day-current-month {
        background-color: pink;
      }

      $light-pink: rgb(255, 241, 243);
      .day-next-month {
        background-color: $light-pink;
      }

      .day-prev-month {
        background-color: $light-pink;
      }
    }
  }


  .fade-enter-active, .fade-leave-active {
    transition: opacity .15s;
  }
  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
    opacity: 0;
  }
}

